--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
     branches: [ "my-changes" ]
 jobs:
   build:
-    runs-on: macos-14
+    runs-on: ubuntu-latest
     steps:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
