--- a/src/handler/Cargo.toml
+++ b/src/handler/Cargo.toml
@@ -34,6 +34,7 @@ serde_json.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tokio-util.workspace = true
+upon.workspace = true
 
 
 [dev-dependencies]
