--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ async-recursion = "1.1.1"
 async-trait = "0.1.64"
 argon2 = "0.5.0"
 axum = { version = "0.7.0", default-features = false, features = ["tokio", "http2", "json", "query", "ws"] }
+base64 = "0.22.1"
 bytes = "1.4.0"
 bytesize = "1.2.0"
 chrono = "0.4.24"
@@ -70,6 +71,8 @@ pretty_assertions = "1.3.0"
 pretty-hex = "0.4.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
+reqwest = "0.12.7"
+sha1 = "0.10.6"
 sha2 = "0.10.8"
 serde = { version = "1.0.152", default-features = false, features = ["alloc"] }
 serde_json = "1.0.92"
@@ -81,6 +84,7 @@ tokio-util = { version = "0.7.7", features = ["io-util"] }
 tower = { version = "0.4.13", default-features = false }
 upon = "0.8.0"
 url = { version = "2.3.1", features = ["serde"] }
+xml-rs = "0.8.22"
 
 [workspace.dependencies.tokio]
 version = "1.29.0"
